fixing logo on firefox (mobile)

--- a/app/sass/_common.scss
+++ b/app/sass/_common.scss
@@ -14,9 +14,6 @@ body {
     right: 0;
     transition: right .4s ease;
 }  
-html.mm-opening #menu-wrapper{
-    right: -80%;
-}
 
 .container {
     width: 960px;
